# better_Skill

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  TRANSFER_README.txt  main.py  pyproject.toml  skill_optimizer.json.example
docs/superpowers/plans/: 2026-05-26-input-files.md  2026-05-27-refactor-extract-benchmark.md  2026-05-28-skill-creator-revision.md  2026-05-28-skill-reference-files.md
docs/superpowers/specs/: 2026-05-26-input-files-design.md  2026-05-27-refactor-extract-benchmark-design.md  2026-05-28-skill-creator-revision-design.md  2026-05-28-skill-reference-files-design.md
skill_optimizer/: cases.py  config.py  files.py  judge.py  optimizer.py  runner.py
test_cases/case_001/: metadata.json  prompt.txt
test_cases/case_001/expected_files/: source.py
test_cases/case_001/input_files/: source.py
test_cases/case_002/: metadata.json  prompt.txt
test_cases/case_002/expected_files/: source.py
test_cases/case_002/input_files/: source.py
test_cases/case_003/: metadata.json  prompt.txt
test_cases/case_003/expected_files/: source.py
test_cases/case_003/input_files/: source.py
tests/: test_cases.py  test_config.py  test_files.py  test_judge.py  test_main.py  test_optimizer.py  test_runner.py
workspace/: SKILL.md
